# x2fa

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  NOTICE  README.md  SECURITY.md  X2FA.md  audit.py  babel.cfg  compose.yml  crypto.py  db.sqlite  demo_rp.py  demo_rp_babel.cfg  demo_rp_settings.toml  litellm_config.yaml  messages.pot  models.py  pyproject.toml  repositories.py  session-ses_26a4.md  settings.toml  start.py  testapp.py  testapp_babel.cfg  totp_helpers.py  webauthn_helpers.py  wsgi.py  x2fa.py  x2fa_admin.py  x2fa_architecture_concept.md
app/: __init__.py  cli.py  config.py  constants.py  extensions.py  models.py  settings.toml
app/oidc/: grants.py
app/routes/: __init__.py  auth.py  backup.py  setup.py  test_helpers.py  totp.py  verify.py
app/services/: crypto.py
app/tools/: generate_translations.py
demo_rp/: app.py  demo_rp_settings.toml
demo_rp_translations/: messages.pot
docs/: CHANGES_SUMMARY.md  DEMO_RP_FIX_SUMMARY.md  DEMO_RP_INSTALLER_PREFLIGHT.md  SECURITY_REMEDIATION.md  ai_audit_20260723_224744.md  architecture.md  cli-reference.md  config_file_handling.md  database_access.md  docu_enhanced_installer.md  getting-started.md  installer.md  introduction.md  migrate2pki.md  oidc-auth.md  packaging.md  packaging_proposal.md  path_handling.md  sec_fixes.md  security.md  testing_the_installer.md  todo.md  trust_options.md  x2fa_architecture_concept.md
docs_old/: INSTALL.md  database_access.md  installer.md  migrate2pki.md  packaging.md  path_handling.md  testing_the_installer.md  trust_options.md
installer/: __main__.py  app.py  ca.py  config_writer.py  models.py  runner.py
installer/screens/: ca_setup.py  (+11 more)
migrations/: alembic.ini  env.py
old_tests/: conftest.py  test_cli.py  test_demo_rp_i18n.py  test_i18n.py  test_routes_backup.py  test_routes_fido2.py  test_routes_totp.py  test_totp_helpers.py
podman/: x2fa-config.volume  x2fa-data.volume  x2fa.container
templates/: backup_verify.html  error.html  setup.html  setup_choose.html  setup_done.html  totp_setup.html  totp_verify.html  verify.html
tests/: conftest.py  test_ca_cli.py  test_cli.py  test_cli_integration.py  test_client_cli.py  test_crypto.py  test_demo_rp_i18n.py  test_grants_auth.py  test_i18n.py  test_installer_config_writer.py  test_installer_e2e.py  test_installer_e2e_real_ca.py  test_installer_models.py  test_installer_screens.py  test_installer_session.py  test_new_auth_methods.py  test_routes_backup.py  test_routes_fido2.py  test_routes_totp.py  test_startup_config_check.py  test_testapp_i18n.py  test_totp_helpers.py  test_webauthn_helpers.py
tools/: generate_translations.py
x2fa/: __init__.py  cli.py  config.py  constants.py  models.py
x2fa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+137 files in other folders)
