[project]
name = "x2fa"
version = "2.0.0"
description = "FIDO2 Microservice mit OIDC-Provider"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.0",
    "flask-migrate>=4.0.0",
    "flask-limiter>=3.5.0",
    "secure>=0.3.0",
    "authlib>=1.3.0",
    "gunicorn>=21.0.0",
    "webauthn>=2.0.0",
    "pyotp>=2.9.0",
    "qrcode>=7.4",
    "Pillow>=10.0.0",
    "cryptography>=41.0.0",
    "bcrypt>=4.0.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9.0"]
mysql = ["pymysql>=1.1.0"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
