[project]
name = "x2fa"
version = "2.0.0"
description = "FIDO2/TOPT Microservice mit OIDC-Provider"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-limiter>=4.1.1",
    "secure>=1.0.1",
    "authlib>=1.6.9",
    "gunicorn>=25.3.0",
    "webauthn>=2.7.1",
    "pyotp>=2.9.0",
    "qrcode>=8.2",
    "Pillow>=12.2.0",
    "cryptography>=46.0.7",
    "bcrypt>=5.0.0",
    "redis>=7.4.0",
    "pyjwt>=2.12.1",
    "dynaconf>=3.2.13",
    "flask-babelplus>=2.2.0",
    "pytz>=2026.1.post1",
    "tomli-w>=1.2.0",
]

[project.optional-dependencies]
postgres   = ["psycopg2-binary>=2.9.0"]
mysql      = ["pymysql>=1.1.0"]
installer  = ["textual>=0.60.0"]

[project.scripts]
x2fa-install = "installer.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pyjwt>=2.12.1",
    "pytest-playwright>=0.7.2",
    "litellm>=1.83.3",
]

[tool.setuptools.packages.find]
where = ["src", "."]

[tool.setuptools.package-data]
"x2fa" = ["templates/*", "config_files/*"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
